# opengltest

./: .gitignore  CMakeLists.txt  glad.c
Libraries/include/glad/: glad.h
opengltest/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  light.vert  main.cpp  testobj.cpp  testobj.h
